# mscoree-rs

./: Cargo.toml
mscoree_safe/: Cargo.toml
mscoree_safe/src/: host.rs  lib.rs  metahost.rs  wrappers.rs
mscoree_sys/: Cargo.toml  build.rs
mscoree_sys/examples/: integration.rs
mscoree_sys/src/: ICeeFileGen.rs  activation.rs  clrdata.rs  cor.rs  cordebug.rs  corhdr.rs  corhlpr.rs  corprof.rs  corpub.rs  corsym.rs  fusion.rs  gchost.rs  inspectable.rs  isolation.rs  ivalidator.rs  ivehandler.rs  lib.rs  macros.rs  metahost.rs  mscoree.rs  openum.rs  strongname.rs  tlbref.rs  vererror.rs
mscoree_sys/src/c/: dllmain.cpp  mscoree_wrapper.cpp  mscoree_wrapper.def  mscoree_wrapper.h
mscoree_sys/src/c_wrapper/: mod.rs  rusthostcontrol.rs
