[package]
name = "mscoree_sys"
version = "0.1.0"
authors = ["Tyler Laing <trinioler@gmail.com>"]

[dependencies]
lazy_static = "1"
mscorlib-sys = { version = "0.1.9" }
regex = "1"
winapi = { version = "0.3.5", features = ["combaseapi", "hstring", "oaidl", "oleauto", "processthreadsapi", "winerror",]}

[build-dependencies]
cc = "1.0"