[package]
name = "mscoree_sys_2"
version = "0.1.0"
authors = ["Tyler Laing <trinioler@gmail.com>"]
description = "Bindings for the mscoree.dll symbols. Windows-only."
license = "MIT"
edition = "2018"


[dependencies]
winapi = { version = "0.3.6", features = ["combaseapi", "hstring", "oaidl", "oleauto", "processthreadsapi", "winerror",]}

